@@ -374,6 +374,8 @@ extern typedata ItemTypes[];
 #define PU_READABLES		0x00400000
 #define PU_MAGIC_DEVICE		0x00800000
 
+#define PU_NOT_CURSED		0x01000000
+
 
 /* Instead of using arbitrary constants for indexing the
  * freearr, add these values.  <= SIZEOFFREE1 will get you
